Update recipe links to remove directory path

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1 style="text-align: center"> PrimeTime Recipes</h1>
     
     <ul style="margin-left: 45%; margin-right: 20%; line-height: 2cm;">
-    <li><a href="./recipes/lasagna.html"> Lasagna</a></li>
-    <li><a href="./recipes/frenchtoast.html"> French Toast</a></li>
-    <li><a href="./recipes/baguette.html"> Baguette Pizza</a></li>
+    <li><a href="lasagna.html"> Lasagna</a></li>
+    <li><a href="frenchtoast.html"> French Toast</a></li>
+    <li><a href="baguette.html"> Baguette Pizza</a></li>
     </ul>
 
 </body>
